Version 1.1.0:
	New features:
	- Ctrl+backspace erases the last word starting from the cursor.
	- Expander widgets also expand/collapse on +/- and right/left arrow.
	- Menus, including right-click menus, now close when clicking on the border.
	- edit_window_t::view_parameters_t is deprecated and replaced by
	  edit_window_t::behavior_parameters_t. The reason for the replacement is to
	  make the parameters extensible without breaking ABI compatibility.

	Bug fixes
	- Handle errors in getcwd more gracefully (i.e. return / as current working
	  directory).
	- Make force_redraw for frame_t call widget_t force_redraw as well, to ensure
	  that the frame_t is redrawn as well. This was very visible when resizing
	  the file dialogs.
	- Calling set_size on edit_window_t now correctly handles nullopt values in
	  the parameters.

Version 1.0.6:
	Bug fixes
	- Search & replace handles zero-width search results from regular expressions
	  allowing, for example, inserting a string at the start of the line by
	  replacing the pattern ^ by some text.
	- Calling indent_selection and unindent_selection on an edit_window_t now
	  correctly performs the same action as pressing tab and shift-tab.

Version 1.0.5:
	Fix the configure script such that it attempts to compile all tests using the
	correct CXXFLAGS.

Version 1.0.4:
	Introduce a PCRE2 compatibility layer using PCRE, to allow compilation on
	platforms which don't provide PCRE2.

Version 1.0.3:
	New features:
	- Migrate to using PCRE2 instead of PCRE.

	Bug fixes:
	- Unsplitting caused segmentation faults.
	- The connection to GPM remained open during suspend, making GPM useless for
	  the duration of the suspend.
	- Prevent the mouse cursor from moving beyond the top of the screen while
	  holding down the mouse button in GPM mode.
	- Ensure that the mouse cursor is visible when the holding down the mouse
	  button in GPM mode.
	- Allow searching for empty strings using regular expressions.

Version 1.0.2: